tests/invalid/UnionType_Invalid_10.whiley

type nat is (int n) where n >= 0

type natlist is [nat]

type nlt is nat | natlist

function g(int y) -> nlt:
    return y

method main() -> void:
    g(-1)
